--- a/src/libs/author-form/components/author-form/author-form.component.html
+++ b/src/libs/author-form/components/author-form/author-form.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <button mat-stroked-button color="primary" type="button" class="back-button mb-3" (click)="goBack()">Back</button>
+  <button mat-stroked-button color="primary" type="button" class="mb-3" (click)="goBack()">Back</button>
 
   <mat-card class="mb-3">
 
