--- a/src/libs/book-form/components/book-form/book-form.component.scss
+++ b/src/libs/book-form/components/book-form/book-form.component.scss
@@ -1,16 +1,16 @@
-.button:hover {
-  background-color: rgba(132, 111, 148, 0.6);
-  cursor: pointer;
-}
-
-.back-button:hover {
-  background-color: rgba(132, 111, 148, 0.6);
-}
+@import "src/styles/variables";
+@import "src/styles/mixin";
 
 button {
-  outline: none;
-}
-
-.button:disabled {
-  cursor: not-allowed;
+  @include button-outline;
+  &:hover {
+    background-color: $button-hover-background-color;
+    cursor: pointer;
+  }
+  &:disabled {
+    cursor: not-allowed;
+  }
+  &:active {
+    @include button-active;
+  }
 }
