--- a/src/app/books/components/book-search/book-search.component.scss
+++ b/src/app/books/components/book-search/book-search.component.scss
@@ -1,16 +1,15 @@
+@import "src/styles/variables";
+@import "src/styles/mixin";
+
 button {
-  outline: none;
-}
-
-button:hover {
-  background-color: rgba(132, 111, 148, 0.6);
-}
-
-button:disabled {
-  cursor: not-allowed;
-}
-
-button:active {
-  background-color: white;
-  opacity: 0.5;
+  @include button-outline;
+  &:hover {
+    background-color: $button-hover-background-color;
+  }
+  &:disabled {
+    cursor: not-allowed;
+  }
+  &:active {
+    @include button-active;
+  }
 }
